workspace into a long page + new design + correction some overflow

--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -300,3 +300,7 @@ header{
   margin-left: 0;
   margin-bottom: -16px;
 }
+
+.boxContent {
+  max-width: 900px;
+}
